--- a/app/src/main/res/layout/child_sr_building_situation.xml
+++ b/app/src/main/res/layout/child_sr_building_situation.xml
@@ -60,7 +60,7 @@
                             android:enabled='@{editable}'
                             android:text="@={citySellRent.houseLocation}"
                             android:id="@+id/et_building_num"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -123,8 +123,8 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:inputType="number"
-                            android:text='@={"" + citySellRent.buildingArea}'
+                            android:inputType="text"
+                            android:text='@={ citySellRent.buildingArea}'
                             android:id="@+id/et_building_area"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -136,9 +136,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={"" + citySellRent.houseArea}'
+                            android:text='@={ citySellRent.houseArea}'
                             android:id="@+id/et_house_area"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -149,9 +149,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={"" + model.houseStandardPrice}'
+                            android:text='@={ model.houseStandardPrice}'
                             android:id="@+id/et_house_standard_price"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -162,9 +162,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.totalArea}'
+                            android:text='@={model.totalArea}'
                             android:id="@+id/et_total_area"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -175,9 +175,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.houseResetTotalPrice}'
+                            android:text='@={model.houseResetTotalPrice}'
                             android:id="@+id/et_house_reset_total_price"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -187,9 +187,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.subbuildingResetPrice}'
+                            android:text='@={model.subbuildingResetPrice}'
                             android:id="@+id/et_subbuilding_reset_price"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -200,9 +200,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.houseTodayValue}'
+                            android:text='@={model.houseTodayValue}'
                             android:id="@+id/et_house_today_value"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -212,9 +212,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.subbuildingTodayValue}'
+                            android:text='@={model.subbuildingTodayValue}'
                             android:id="@+id/et_subbuilding_today_value"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -224,9 +224,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.yearRobust}'
+                            android:text='@={model.yearRobust}'
                             android:id="@+id/et_year_robust"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -236,9 +236,9 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={""+model.yearUsed}'
+                            android:text='@={model.yearUsed}'
                             android:id="@+id/et_year_used"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
