--- a/app/src/main/res/layout/child_hs_land_situation.xml
+++ b/app/src/main/res/layout/child_hs_land_situation.xml
@@ -114,13 +114,15 @@
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:baselineAligned="false">
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:hint="宗地长度"
+                                android:enabled="@{editable}"
                                 android:id="@+id/et_land_length"
                                 android:layout_width="match_parent"
                                 android:text='@={citySellRent.landLength}'
@@ -134,6 +136,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:hint="宗地宽度"
+                                android:enabled="@{editable}"
                                 android:text='@={citySellRent.landWidth}'
                                 android:id="@+id/et_land_width"
                                 android:layout_width="match_parent"
@@ -202,7 +205,8 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@={""+citySellRent.distToCornor}'
+                                android:text='@={citySellRent.distToCornor}'
+                                android:enabled="@{editable}"
                                 android:id="@+id/et_dist_to_cornor"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -213,7 +217,8 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@={"" + citySellRent.buildingPlotRate}'
+                                android:text='@={ citySellRent.buildingPlotRate}'
+                                android:enabled="@{editable}"
                                 android:id="@+id/et_building_plot_rate"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -231,7 +236,8 @@
                             android:hint="临街宽度(m)"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{"" + citySellRent.widthToStreet}'
+                                android:text='@{ citySellRent.widthToStreet}'
+                                android:enabled="@{editable}"
                                 android:id="@+id/et_width_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -242,8 +248,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{"" + citySellRent.depthToStreet}'
+                                android:text='@{ citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
+                                android:enabled="@{editable}"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
                         </android.support.design.widget.TextInputLayout>
@@ -281,12 +288,6 @@
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </LinearLayout>
-
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:hint="使用权取得时间"
@@ -298,7 +299,8 @@
                             android:clickable="true"
                             android:focusableInTouchMode="false"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:focusable="true" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -306,7 +308,7 @@
                         android:hint="土地使用年限"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text='@={""+citySellRent.landServiceableLife}'
+                            android:text='@={citySellRent.landServiceableLife}'
                             android:enabled='@{editable}'
                             android:id="@+id/et_land_serviceable_life"
                             android:entries="@array/array_usage"
