--- a/app/src/main/res/layout/child_sr_land_situation.xml
+++ b/app/src/main/res/layout/child_sr_land_situation.xml
@@ -203,7 +203,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@={""+citySellRent.distToCornor}'
+                                android:text='@={citySellRent.distToCornor}'
                                 android:enabled='@{editable}'
                                 android:id="@+id/et_dist_to_cornor"
                                 android:layout_width="match_parent"
@@ -215,7 +215,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@={"" + citySellRent.buildingPlotRate}'
+                                android:text='@={ citySellRent.buildingPlotRate}'
                                 android:id="@+id/et_building_plot_rate"
                                 android:enabled='@{editable}'
                                 android:layout_width="match_parent"
@@ -235,7 +235,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:enabled='@{editable}'
-                                android:text='@{"" + citySellRent.widthToStreet}'
+                                android:text='@{ citySellRent.widthToStreet}'
                                 android:id="@+id/et_width_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -247,7 +247,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:enabled='@{editable}'
-                                android:text='@{"" + citySellRent.depthToStreet}'
+                                android:text='@{ citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -311,7 +311,7 @@
                         android:hint="土地使用年限"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text='@={""+citySellRent.landServiceableLife}'
+                            android:text='@={citySellRent.landServiceableLife}'
                             android:enabled='@{editable}'
                             android:id="@+id/et_land_serviceable_life"
                             android:entries="@array/array_usage"
